Переношу кэши на Zstandard для улучшения сжатия данных.